2012-12-12  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlevent.c: (gst_ttml_event_list_flush):
	  - Send an extra buffer to clear the last span.

2012-12-12  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_gen_buffer):
	  - Generate newsegments starting from the incoming buffer timestamp, not
	    the first produced buffer timestamp.

2012-12-11  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_gen_buffer):
	  - Generate an empty buffer (containing only one SPACE character) to clear
	    the subtitles.

2012-12-11  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_chain):
	  - Use text/x-pango-markup caps instead of text/plain, so textoverlay
	    knows what we are producing.

2012-12-07  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c: (gst_ttml_attribute_parse):
	* src/gstttmlenums.h:
	* src/gstttmlstate.c: (gst_ttml_state_set_attribute),
	(gst_ttml_state_get_attribute):
	* src/gstttmlstyle.c: (gst_ttml_style_reset),
	(gst_ttml_style_gen_pango):
	* src/gstttmlstyle.h:
	  - Support "backgroundColor" attribute (only on text spans, no support
	    for regions yet)

2012-12-07  Xavi Artigas  <xartigas@fluendo.com>

	* win32/vs10/libgstfluttml_sdk.vcxproj:
	* win32/vs10/libgstfluttml_sdk.vcxproj.filters:
	  - Update VS project files

2012-12-07  Xavi Artigas  <xartigas@fluendo.com>

	* src/Makefile.am:
	* src/gstttmlspan.c: (gst_ttml_span_compose), (gst_ttml_span_new):
	* src/gstttmlstate.c: (gst_ttml_state_reset):
	* src/gstttmlstate.h:
	* src/gstttmlstyle.c: (gst_ttml_style_reset),
	(gst_ttml_style_free_content), (gst_ttml_style_copy),
	(gst_ttml_style_gen_pango):
	* src/gstttmlstyle.h:
	  - Moved the Style management to its own file, because it is going to
	    get a bit big (Visual Studio files coming next)

2012-12-07  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_add_characters):