@@ -1,3 +1,9 @@
+2012-12-14  Xavi Artigas  <xartigas@fluendo.com>
+
+	* src/gstttmlstyle.c: (gst_ttml_style_str_concat),
+	(gst_ttml_style_gen_pango):
+	  - Better generation of Pango markup.
+
 2012-12-12  Xavi Artigas  <xartigas@fluendo.com>
 
 	* src/gstttmlevent.c: (gst_ttml_event_list_flush):
